--- a/index.html
+++ b/index.html
@@ -5,20 +5,86 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Discord</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- debug -->
   <div class="debug">
+    <!-- header  -->
+
    <header>
+     <div class="container">
+      <nav>
+        <!-- logo -->
+        <div class="logo">
+          <img src="img/logo.svg" alt="discord">
+        </div>
+        <!-- link -->
+        <div class="list">
+          <ul>
+            <li>link<a href=""></a></li>
+            <li>link<a href=""></a></li>
+            <li>link<a href=""></a></li>
+            <li>link<a href=""></a></li>
+            <li>link<a href=""></a></li>
+          </ul>
+        </div>
+        <!-- accedi -->
+        <div class="button">
+          <button>accedi</button>
+
+        </div>
+      </nav>
+    </div>
 
    </header>
+   <div class="jambo">
+     <div class="container"></div>
+
+   </div>
+
+    <!-- /header -->
+
+    <!-- main -->
    <main>
+     <div class="container">
+       <div></div>
+       <div></div>
+       <div></div>
+       <div></div>
+       <div></div>
+       <div></div>
+       <div></div>
+
+     </div>
 
    </main>
+    <!-- /main -->
+
+    <!-- footer -->
 
    <footer>
+     <div class="container">
+
+       <!-- footer top -->
+       <div class="footer top">
+         <div></div>
+         <div></div>
+         <div></div>
+         <div></div>
+         <div></div>
+
+       </div>
+
+       <!-- footer-bottomo -->
+       <div class="footer bottom">
+
+       </div>
+     </div>
 
    </footer>
+    <!-- /footer -->
   </div>
-  
+    <!-- /debug -->
 </body>
 </html>
