--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Discord</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!-- debug -->
@@ -22,11 +23,11 @@
         <!-- link -->
         <div class="list">
           <ul>
-            <li>link<a href=""></a></li>
-            <li>link<a href=""></a></li>
-            <li>link<a href=""></a></li>
-            <li>link<a href=""></a></li>
-            <li>link<a href=""></a></li>
+            <li><a href="">link</a></li>
+            <li><a href="">link</a></li>
+            <li><a href="">link</a></li>
+            <li><a href="">link</a></li>
+            <li><a href="">link</a></li>
           </ul>
         </div>
         <!-- accedi -->
@@ -39,7 +40,18 @@
 
    </header>
    <div class="jambo">
-     <div class="container"></div>
+     <div class="container">
+       <div class="title">
+           <h1>Il tuo posto per parlare</h1>
+           <p>Lorem ipsum dolor sit, amet consectetur 
+           adipisicing elit. Adipisci
+           perferendis beatae eius nihil 
+           </p>
+           <a href=""><i class="fas fa-long-arrow-alt-down"></i>Scarica per Mac</a>
+           <a href="">Apri Discord nel tuo browser</a>
+      </div>
+       
+     </div>
 
    </div>
 
