--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
     <!-- debug -->
   <div class="debug">
-    <!-- header  -->
 
+    <!-- header  -->
    <header>
      <div class="container">
-      <nav>
-        <!-- logo -->
-        <div class="logo">
+       <nav>
+         <!-- logo -->
+         <div class="logo">
           <img src="img/logo.svg" alt="discord">
-        </div>
-        <!-- link -->
-        <div class="list">
+         </div>
+         <!-- link -->
+         <div class="list">
           <ul>
             <li><a href="">link</a></li>
             <li><a href="">link</a></li>
@@ -29,30 +29,30 @@
             <li><a href="">link</a></li>
             <li><a href="">link</a></li>
           </ul>
-        </div>
+         </div>
         <!-- accedi -->
-        <div class="button">
+         <div class="button">
           <button>accedi</button>
 
-        </div>
-      </nav>
-    </div>
-
+         </div>
+       </nav>
+     </div>
    </header>
+          
+         <!-- jamboo -->
+
    <div class="jambo">
      <div class="container">
-       <div class="title">
+        <div class="title">
            <h1>Il tuo posto per parlare</h1>
            <p>Lorem ipsum dolor sit, amet consectetur 
-           adipisicing elit. Adipisci
-           perferendis beatae eius nihil 
+           adipisicing elit. LoreffffffffffffffffffffffffAdipisci
+           perferendis beatae eius nihil aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
            </p>
            <a href=""><i class="fas fa-long-arrow-alt-down"></i>Scarica per Mac</a>
            <a href="">Apri Discord nel tuo browser</a>
+        </div>
       </div>
-       
-     </div>
-
    </div>
 
     <!-- /header -->
