--- a/index.html
+++ b/index.html
@@ -59,17 +59,48 @@
 
     <!-- main -->
    <main>
-     <div class="container">
-       <div></div>
-       <div></div>
-       <div></div>
-       <div></div>
-       <div></div>
-       <div></div>
-       <div></div>
 
-     </div>
+        <!-- first box -->
+     <div class="container clearfix ">
+       <div class="imgf">
+         <img src="img/item1.svg" alt="rana ">
+       </div>
+       <div class="text left">
+         <h1>Un luogo a nvito con tutto lo spazio necessario per parlare</h1>
+         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae repellat ipsa, molestias provident saepe ipsum itaque atque, eos aliquam dolores ex rerum quae quaerat laborum ullam obcaecati non a temporibus.</p>
+        </div>
+      </div>
 
+        <!-- second box -->
+       <div class="text right">
+        <h1>Un luogo a invito con o</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae repellat ipsa, molestias provident saepe ipsum itaque atque, eos aliquam dolores ex rerum quae quaerat laborum ullam obcaecati non a temporibus.
+        </p>
+       <div class="imgf">
+          <img src="img/item2.svg" alt="">
+       </div>
+       </div>
+
+       <!-- third box -->
+       <div class="imgf">
+         <img src="img/item3.svg" alt="">
+       </div>
+       <div class="text">
+        <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae repellat ipsa, molestias provident saepe ipsum itaque atque, eos aliquam dolores ex rerum quae quaerat laborum ullam obcaecati non a temporibus.
+        </p>
+       </div>
+
+        <!-- four box -->
+         <div class="textt">
+           <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae repellat ipsa, molestias provident saepe ipsum itaque atque, eos aliquam dolores ex rerum quae quaerat laborum ullam obcaecati non a temporibus.
+           </p>
+         </div>
+         <div class="pimmagine">
+           <img src="img/item4-big.svg" alt="">
+         </div>
+    </div>
    </main>
     <!-- /main -->
 
