--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
    <main>
 
         <!-- first box -->
-     <div class="container clearfix ">
+     <div id="box"class="container clearfix ">
        <div class="imgf">
          <img src="img/item1.svg" alt="rana ">
        </div>
@@ -69,14 +69,14 @@
          <h1>Un luogo a nvito con tutto lo spazio necessario per parlare</h1>
          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae repellat ipsa, molestias provident saepe ipsum itaque atque, eos aliquam dolores ex rerum quae quaerat laborum ullam obcaecati non a temporibus.</p>
         </div>
-      </div>
+      
 
         <!-- second box -->
-       <div class="text right">
+       <div class="textfr">
         <h1>Un luogo a invito con o</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae repellat ipsa, molestias provident saepe ipsum itaque atque, eos aliquam dolores ex rerum quae quaerat laborum ullam obcaecati non a temporibus.
         </p>
-       <div class="imgf">
+       <div class="imgffr">
           <img src="img/item2.svg" alt="">
        </div>
        </div>
@@ -99,8 +99,8 @@
          </div>
          <div class="pimmagine">
            <img src="img/item4-big.svg" alt="">
-         </div>
-    </div>
+         </div>  
+     </div>
    </main>
     <!-- /main -->
 
