--- a/index.html
+++ b/index.html
@@ -107,20 +107,50 @@
     <!-- footer -->
 
    <footer>
-     <div class="container">
+     <div class="container clearfix">
 
        <!-- footer top -->
        <div class="footer top">
-         <div></div>
-         <div></div>
-         <div></div>
-         <div></div>
-         <div></div>
+         <div>
+           <h1>Il tuo posto per parlare</h1>
+           <img src="img/ita.png" alt="">
+         </div>
+         <div>
+           <ul>
+             <li>link</li>
+             <li>link</li>
+             <li>link</li>
+           </ul>
+         </div>
+         <div>
+          <ul>
+            <li>link</li>
+            <li>link</li>
+            <li>link</li>
+          </ul>
+         </div>
+         <div>
+          <ul>
+            <li>link</li>
+            <li>link</li>
+            <li>link</li>
+          </ul>
+         </div>
+         <div>
+          <ul>
+            <li>link</li>
+            <li>link</li>
+            <li>link</li>
+          </ul>
+         </div>
 
        </div>
+       <hr>
 
        <!-- footer-bottomo -->
        <div class="footer bottom">
+         <img src="img/logo.svg" alt="">
+         <a href="">accedi</a>
 
        </div>
      </div>
